This file records noteworthy changes.

1.1.0 (<date>)
* "(x+1).subs(x==x-1)" now returns the correct result "x" instead of "x-1".

1.0.5 (<date>)
* (l)degree(s), coeff(s, n) and collect(s) were extended to accept expressions
  of any class (except add/mul/ncmul/numeric) for "s". They should even work
  if "s" is a "power" object, as long as the exponent is non-integer, but with
  some limitations. For example, you can "collect(a*2^x+b*2^x, 2^x)" to get
  "(a+b)*2^x", but "degree(2^(3*x), 2^x)" yields 0 instead of 3).

1.0.4 (24 January 2001)
* Speedup in expand().
* Faster Bernoulli numbers (Markus Nullmeier).
* Some minor bugfixes and documentation updates.

1.0.3 (21 December 2001)
* Fixed a bug where quo() would call vector::reserve() with a negative
  argument.
* Fix several bugs in code generation.

1.0.2 (19 December 2001)
* Input parser recognizes "sqrt()", which is also used in the output.
* divide(a,b,q) only modifies q if the division succeeds; also, divide(a,b,a)
  works now.
* Fixed small bug in dummy index renaming which could cause it to not
  recognize renamable indices in some cases.
* power::degree() and power::ldegree() throw an exception when encountering
  a non-integer exponent.
* Add output-support for Python bindings.

1.0.1 (22 November 2001)
* Function sqrfree() handles a few more cases now.
* Class relational has real canonical ordering now.
* Handle obscene libreadline version numbers when building ginsh.

1.0.0 (6 November 2001)
* Some internal reorganization resulting in a general speed-up.
* The last 3 evaluated expressions in ginsh are now referred to with the
  tokens '%', '%%' and '%%%'. The old '"', '""' and '"""' remain for
  compatibility but may be removed in a future version of GiNaC.

0.9.4 (20 September 2001)
* Functions have better support for external scripting languages.
* Interface cleanups and bugfixes.
* Fix silly bug in evalf() that prevented things like 2^Pi being computed.

0.9.3 (16 August 2001)